SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  capsule.cc
	kitehelper.cc
	kukaplan.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} KineoController)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-geometry)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
