SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  capsule.cc
	kitehelper.cc
	kukaplan.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} KineoController)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-geometry)

ADD_EXECUTABLE (plannercli
	plannercli.cc
  )

TARGET_LINK_LIBRARIES (plannercli
	${LIBRARY_NAME}
	)

PKG_CONFIG_USE_DEPENDENCY(plannercli KineoController)
PKG_CONFIG_USE_DEPENDENCY(plannercli hpp-geometry)

KINEO_STANDALONE(plannercli)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
